--- a/css/start.css
+++ b/css/start.css
@@ -41,3 +41,60 @@ header{
     background-color: #4267b2;
 }
 
+/* #Quiz {
+    margin-top: 60px;
+    display: grid;
+    
+} */
+
+/* #GST121, #GST122, #GST123, #GST221 {
+    display: grid;
+   
+    
+} */
+
+
+li {
+    padding: 5px;
+    margin-right: 35px;
+}
+
+ul{
+    list-style: none;
+}
+h3{
+    font-weight: 500;
+    font-size: 20px;
+}
+
+button{
+margin-bottom: 10px;
+}
+button:hover{
+    background-color: #4267b2;
+}
+@media (max-width: 600px) {
+    #GST121, #GST122, #GST123, #GST221 {
+        
+        max-width: 100px;
+        width: 100%;
+        margin: 0 auto;
+    } 
+}
+
+#about .about-col {
+    
+    border-radius: 10px;
+    padding: 1px;
+    background: lightsteelblue;
+    
+  }
+  
+ .section-header{
+    background: lightsteelblue;
+   border-radius: 4px;
+}
+.section-header h3 {
+    padding: 10px;
+}
+
