--- a/quiz.css
+++ b/quiz.css
@@ -133,17 +133,20 @@ body{
 }
 #scoreContainer{
     top: 0;
-    left: 2.5rem;
+    left: 2.7rem;
     margin : 20px auto;
     background-color: white;
     opacity: 0.8;
-    height: 300px;
+    height: 500px;
     width : 700px;
     border-radius: 5px;
     box-shadow: 0px 5px 15px 0px;
     position: absolute;
     display: none;
 }
+
+
+
 #scoreContainer img{
     position: absolute;
     top:100px;
@@ -174,13 +177,19 @@ body{
     opacity: 0.8;
 }
 
-@media (max-width: 833px){
-    .container{
-        position: absolute;
-        height: 150vw;
-    }
+p.naver{
+    text-align: center;
+    color: #000;
 }
 
+
+.nav{
+    color: #0084FF;
+
+}
+.nav:hover{
+    opacity: 0.6;
+}
 
 
 
