--- a/css/start.css
+++ b/css/start.css
@@ -1,5 +1,5 @@
-body{
-    background-color: lightyellow;
+#header{
+    background-color: #3C5A99;
 }
 
 #select {
@@ -37,9 +37,7 @@ body{
 .down{
     margin-top: 8rem;
 }
-header{
-    background-color: #4267b2;
-}
+
 
 /* #Quiz {
     margin-top: 60px;
@@ -53,11 +51,11 @@ header{
     
 } */
 
-
+/* 
 li {
     padding: 5px;
     margin-right: 35px;
-}
+} */
 
 ul{
     list-style: none;
@@ -82,7 +80,7 @@ button:hover{
     } 
 }
 
-#about .about-col {
+#start .start-col {
     
     border-radius: 10px;
     padding: 1px;
@@ -90,11 +88,104 @@ button:hover{
     
   }
   
- .section-header{
+.section-header{
     background: lightsteelblue;
    border-radius: 4px;
 }
 .section-header h3 {
+    background: lightsteelblue;
     padding: 10px;
 }
 
+#start {
+    background: url("../img/about-bg.webp") center top no-repeat fixed;
+    background-size: cover;
+    padding: 60px 0 40px 0;
+    position: relative;
+  }
+  
+  #start::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgba(255, 255, 255, 0.92);
+    z-index: 9;
+  }
+  
+  #start .container {
+    position: relative;
+    z-index: 10;
+  }
+  
+  #start .start-col {
+    background: #fff;
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
+    margin-bottom: 20px;
+  }
+  
+  #start .start-col .img {
+    position: relative;
+  }
+  
+  .start-col .img img {
+    border-radius: 4px 4px 0 0;
+  }
+  
+  #start .start-col .icon {
+    width: 64px;
+    height: 64px;
+    padding-top: 8px;
+    text-align: center;
+    position: absolute;
+    background-color: #3C5A99;
+    border-radius: 50%;
+    text-align: center;
+    border: 4px solid #fff;
+    left: calc( 50% - 32px);
+    bottom: -30px;
+    transition: 0.3s;
+  }
+  
+  #start .start-col i {
+    font-size: 36px;
+    line-height: 1;
+    color: #fff;
+    transition: 0.3s;
+  }
+  
+  #start .start-col:hover .icon {
+    background-color: #fff;
+  }
+  
+  #start .start-col:hover i {
+    color: #3C5A99;
+  }
+  
+  #start .start-col h2 {
+    color: #000;
+    text-align: center;
+    font-weight: 700;
+    font-size: 20px;
+    padding: 0;
+    margin: 40px 0 12px 0;
+  }
+  
+  #start .start-col h2 a {
+    color: #000;
+  }
+  
+  #start .start-col h2 a:hover {
+    color: #3C5A99;
+  }
+  
+  #start .start-col p {
+    font-size: 14px;
+    line-height: 24px;
+    color: #333;
+    margin-bottom: 0;
+    padding: 0 20px 20px 20px;
+  }
