--- a/css/style.css
+++ b/css/style.css
@@ -167,22 +167,24 @@ h6 {
 }
 
 #intro h2 {
-  background: rgba(0, 0, 0, 0.5);
-  border-radius: 8px;
+  /* background: rgba(0, 0, 0, 0.5); */
+  /* border-radius: 8px; */
   color:white;
   margin-bottom: 30px;
   padding: 10px;
   font-size: 48px;
   font-weight: 700;
   width: 100%;
+  box-shadow: inset 0 0 10px ;
 }
 
 #intro h4 {
   width: 80%;
   margin: 0 auto 30px auto;
-  color: #fff;
-  background: rgba(0, 0, 0, 0.5);
-  border-radius: 10px;
+  color: white;
+  /* background: rgba(0, 0, 0, 0.5); */
+  /* border-radius: 10px; */
+  box-shadow:  inset 0 0 10px rgba(0, 0, 0, 0.08);
 }
 
 #intro .carousel-fade {
@@ -249,6 +251,7 @@ h6 {
   background: #fff;
   color: #3C5A99;
 }
+
 
 /*--------------------------------------------------------------
 # Navigation Menu
@@ -1141,3 +1144,223 @@ span.size{
   }
 }
 
+@media only screen 
+  and (min-device-width: 128px) 
+  and (max-device-width: 160px) 
+ {
+
+  .back-to-top {
+    bottom: 15px;
+  }
+
+  #header #logo h1 {
+    font-size: 28px;
+  }
+
+  #header #logo img {
+    max-height: 40px;
+  }
+
+  #intro h2 {
+    font-size: 28px;
+  }
+
+  #nav-menu-container {
+    display: none;
+  }
+
+  #mobile-nav-toggle {
+    display: inline;
+  }
+}
+
+/* body{
+    background-color: lightyellow;
+} */
+
+#select {
+  z-index: 600;
+  position: relative;
+ 
+
+}
+.select{
+  text-align: center;
+  color: white;
+}
+
+
+#select > .select_background{
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  position: absolute;
+  left: 0;
+  right: 0;
+  box-sizing: border-box;
+  top: 0;
+  bottom: 0;
+  background-color: #4267b2;
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+
+}
+/* .select_background{
+  z-index: -1;
+  
+} */
+
+.down{
+  margin-top: 2rem;
+}
+
+
+/* #Quiz {
+  margin-top: 60px;
+  display: grid;
+  
+} */
+
+/* #GST121, #GST122, #GST123, #GST221 {
+  display: grid;
+ 
+  
+} */
+
+/* 
+li {
+  padding: 5px;
+  margin-right: 35px;
+} */
+
+ul{
+  list-style: none;
+}
+h3{
+  font-weight: 500;
+  font-size: 20px;
+}
+
+button{
+margin-bottom: 10px;
+}
+button:hover{
+  background-color: #4267b2;
+}
+@media (max-width: 600px) {
+  #GST121, #GST122, #GST123, #GST221 {
+      
+      max-width: 100px;
+      width: 100%;
+      margin: 0 auto;
+  } 
+}
+
+#start .start-col {
+  
+  border-radius: 10px;
+  padding: 1px;
+  background: lightsteelblue;
+  
+}
+
+.section-header{
+  /* background: lightsteelblue; */
+ border-radius: 4px;
+}
+.section-header h3 {
+  padding: 10px;
+}
+
+#start {
+  background: url("../img/about-bg.webp") center top no-repeat fixed;
+  background-size: cover;
+  padding: 60px 0 40px 0;
+  position: relative;
+}
+
+#start::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.92);
+  z-index: 9;
+}
+
+#start .container {
+  position: relative;
+  z-index: 10;
+}
+
+#start .start-col {
+  background: #fff;
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
+  margin-bottom: 20px;
+}
+
+#start .start-col .img {
+  position: relative;
+}
+
+.start-col .img img {
+  border-radius: 4px 4px 0 0;
+}
+
+#start .start-col .icon {
+  width: 64px;
+  height: 64px;
+  padding-top: 8px;
+  text-align: center;
+  position: absolute;
+  background-color: #3C5A99;
+  border-radius: 50%;
+  text-align: center;
+  border: 4px solid #fff;
+  left: calc( 50% - 32px);
+  bottom: -30px;
+  transition: 0.3s;
+}
+
+#start .start-col i {
+  font-size: 36px;
+  line-height: 1;
+  color: #fff;
+  transition: 0.3s;
+}
+
+#start .start-col:hover .icon {
+  background-color: #fff;
+}
+
+#start .start-col:hover i {
+  color: #3C5A99;
+}
+
+#start .start-col h2 {
+  color: #000;
+  text-align: center;
+  font-weight: 700;
+  font-size: 20px;
+  padding: 0;
+  margin: 40px 0 12px 0;
+}
+
+#start .start-col h2 a {
+  color: #000;
+}
+
+#start .start-col h2 a:hover {
+  color: #3C5A99;
+}
+
+#start .start-col p {
+  font-size: 14px;
+  line-height: 24px;
+  color: #333;
+  margin-bottom: 0;
+  padding: 0 20px 20px 20px;
+}
