--- a/css/start.css
+++ b/css/start.css
@@ -54,11 +54,12 @@
 /* 
 li {
     padding: 5px;
-    margin-right: 35px;
-} */
+    margin-right: 5px;
+}  */
 
 ul{
     list-style: none;
+    padding: 5px;
 }
 h3{
     font-weight: 500;
